--- a/public/style.css
+++ b/public/style.css
@@ -24,7 +24,37 @@ html, body
     position: absolute;
     bottom: 0;
     right: 0;
-  }
+}
+
+.pre-scrollable{
+    //height: 50%;
+}
+
+.myScroll {
+    height: 70%;
+    overflow-y:auto;
+}
+
+ul {
+    position: absolute;
+    top: 20px;
+    bottom: 20px;
+    left: 20px;
+    right: 20px;
+    overflow: auto;
+    margin: 0;
+    padding: 0;
+
+    border: 2px solid #ccc;
+
+    font-size: 16px;
+    font-family: Arial, sans-serif;
+
+    // Again, this is where the magic happens
+    -webkit-overflow-scrolling: touch;
+}
+
+
 
 
 
