--- a/public/style.css
+++ b/public/style.css
@@ -41,7 +41,7 @@ html, body
     font-size: 16px;
     font-family: Arial, sans-serif;
 
-    // Again, this is where the magic happens
+    /* Again, this is where the magic happens*/
     -webkit-overflow-scrolling: touch;
 }
 
