--- a/public/style.css
+++ b/public/style.css
@@ -40,13 +40,20 @@ html, body
     margin: 0;
     padding: 0;
 
-    border: 2px solid #ccc;
+    border: 0px solid #ccc;
 
     font-size: 16px;
     font-family: Arial, sans-serif;
 
     /* Again, this is where the magic happens*/
     -webkit-overflow-scrolling: touch;
+}
+
+.scrollList_usersOnline {
+    top: 0px;
+    bottom: 50px;
+    left: 0px;
+    right: 0px;
 }
 
 
