--- a/public/style.css
+++ b/public/style.css
@@ -56,6 +56,22 @@ html, body
     right: 0px;
 }
 
+.userIcon {
+    display: inline-block;
+    padding: 0 25px;
+    height: 50px;
+    font-size: 16px;
+    line-height: 50px;
+    border-radius: 25px;
+    background-color: #f1f1f1;
+}
 
+.userIcon img {
+    float: left;
+    margin: 0 10px 0 -25px;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+}
 
 
